--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,14 @@ jobs:
           zig build -Doptimize=ReleaseFast -Dtarget=${{ matrix.target }}
           mkdir -p dist
           # Zig 0.11+ puts artifacts in zig-out/bin
+          # Zig 0.11+ puts artifacts in zig-out/bin
           cp zig-out/bin/llm-cost* dist/llm-cost-${{ matrix.suffix }}
+
+      - name: Smoke Test
+        if: (matrix.target == 'x86_64-linux-gnu' && matrix.os == 'ubuntu-latest') || (matrix.target == 'aarch64-macos' && matrix.os == 'macos-latest')
+        run: |
+          ./zig-out/bin/llm-cost tokens --model gpt-4o <<< "Hello world"
+          ./zig-out/bin/llm-cost price --model gpt-4o --tokens-in 100
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
