--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ tools/unicode_data/
 zig-0.13.0/
 testdata/bench_realistic.jsonl
 
+# Phase 1.5 Internal Docs
+docs/roadmap-1.5.md
+docs/tdd-1.5.md
+docs/implementation-plan-1.5.md
+docs/adr-0001-phase-1.5-design-decisions.md
+
+
