--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,15 +18,18 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Setup Zig
-        uses: mlugg/setup-zig@v1
+        uses: mlugg/setup-zig@v1 # TODO: Pin SHA
         with:
           version: 0.13.0
 
       - name: Unit Tests
         run: zig build test
+
+      - name: Golden Tests
+        run: zig build test-golden
 
       - name: Fuzzing Sanity Check
         # Run full iterations (2000 per model) - fast enough for CI
@@ -85,7 +88,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Build + SBOM + Sign
         uses: Rul1an/zig-cross-compile-action@66076af8e44f186b08e2d05b5a1aa7c91c8042d6
@@ -118,7 +121,7 @@ jobs:
           ./dist/llm-cost-${{ matrix.suffix }} tokens --model gpt-4o <<< "Hello world"
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@654d0383cd858f664a27457ef6725206263bdaec # v4.0.0
         with:
           name: llm-cost-${{ matrix.suffix }}-signed
           path: |
@@ -136,12 +139,12 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
         with:
           path: artifacts
 
       - name: Create Release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.0.8
         with:
           files: artifacts/**/*
         env:
