ci: enforce zig fmt on build.zig

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
       - uses: mlugg/setup-zig@v1 # TODO: Pin SHA
         with:
           version: 0.14.0
-      - run: zig fmt --check src/
+      - run: zig fmt --check build.zig src/
