--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,7 +121,7 @@ jobs:
           ./dist/llm-cost-${{ matrix.suffix }} tokens --model gpt-4o <<< "Hello world"
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@654d0383cd858f664a27457ef6725206263bdaec # v4.0.0
+        uses: actions/upload-artifact@v4
         with:
           name: llm-cost-${{ matrix.suffix }}-signed
           path: |
@@ -139,7 +139,7 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
+      - uses: actions/download-artifact@v4
         with:
           path: artifacts
 
