--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,7 +118,7 @@ jobs:
       - name: Smoke Test
         if: matrix.target == 'x86_64-linux-gnu' || matrix.target == 'aarch64-macos'
         run: |
-          ./dist/llm-cost-${{ matrix.suffix }} tokens --model gpt-4o <<< "Hello world"
+          ./dist/llm-cost-${{ matrix.suffix }} count --model gpt-4o <<< "Hello world"
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
