--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Setup Zig
-        uses: mlugg/setup-zig@v1 # TODO: Pin SHA
+        uses: mlugg/setup-zig@53fc45b17fe98b52f92ee5ea08ff48a85a3e7eb7 # v1
         with:
           version: 0.14.0
 
@@ -49,6 +49,7 @@ jobs:
     permissions:
       contents: read
       id-token: write # Required for keyless cosign signing
+      attestations: write
 
     strategy:
       fail-fast: false
@@ -90,6 +91,11 @@ jobs:
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
+      - name: Setup Zig
+        uses: mlugg/setup-zig@53fc45b17fe98b52f92ee5ea08ff48a85a3e7eb7 # v1
+        with:
+          version: 0.14.0
+
       - name: Build + SBOM + Sign
         uses: Rul1an/zig-cross-compile-action@66076af8e44f186b08e2d05b5a1aa7c91c8042d6
         with:
@@ -104,6 +110,11 @@ jobs:
           sbom_output: "dist/llm-cost-${{ matrix.suffix }}.cdx.json"
           sign: ${{ matrix.do_sign }}
           sign_artifact: "zig-out/bin/${{ matrix.binary }}"
+
+      - name: Attest Build Provenance
+        uses: actions/attest-build-provenance@92c65d2898f1f53cfdc910b962cecff86e7f8fcc # v1
+        with:
+          subject-path: "zig-out/bin/${{ matrix.binary }}"
 
       - name: Stage Artifacts
         run: |
@@ -144,8 +155,31 @@ jobs:
           path: artifacts
 
       - name: Create Release
-        uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.0.8
+        uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # v2.0.8
         with:
           files: artifacts/**/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  verify:
+    needs: release
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: read
+    steps:
+      - name: Verify Released Artifacts
+        run: |
+          # This assumes the release is publicly available immediately
+          TAG=${GITHUB_REF#refs/tags/}
+          echo "Verifying release $TAG..."
+
+          # Install GitHub CLI (pre-installed on runner)
+
+          # Verify the linux-x86_64 binary as a sample
+          gh release download $TAG -p "llm-cost-linux-x86_64" --repo ${{ github.repository }}
+
+          echo "Run gh attestation verify..."
+          gh attestation verify llm-cost-linux-x86_64 --repo ${{ github.repository }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
