--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,10 +118,11 @@ jobs:
         if: matrix.do_sbom == true
         uses: anchore/sbom-action@d94f46e13c6c62f59525ac9a1e147a99dc0b9bf5 # v0.17.9
         with:
-          path: zig-out/bin/${{ matrix.binary }}
+          path: zig-out/bin
           artifact-name: llm-cost-${{ matrix.suffix }}.cdx.json
           format: cyclonedx-json
           output-file: dist/llm-cost-${{ matrix.suffix }}.cdx.json
+
 
       - name: Sign Artifact
         if: matrix.do_sign == true
