infra: harden installation scripts and standardize on darwin asset naming

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,7 +81,7 @@ jobs:
             do_sign: true
           - os: macos-latest
             target: aarch64-macos
-            suffix: macos-arm64
+            suffix: darwin-arm64
             binary: llm-cost
             do_sbom: false
             do_sign: false
